Fixed menu overlay issue on Mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,7 +61,7 @@ nav h1{
   font-size: 2rem;
   font-weight: 600;
   letter-spacing: -0.1rem;
-  z-index: 10;
+  z-index: 999;
 }
 
 .nav-active h1{
@@ -83,7 +83,7 @@ nav .nav-links{
     height: 100vh;
     padding: 0rem 2.5rem;
     background: #101010;
-    z-index: 9;
+    z-index: 998;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -147,7 +147,7 @@ nav .burger{
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  z-index: 10;
+  z-index: 999;
 }
 
 nav .burger:hover{
